Add lockfile + engines

--- a/package.json
+++ b/package.json
@@ -2,12 +2,16 @@
   "name": "livestream-races",
   "version": "1.0.0",
   "type": "module",
-  "scripts": { "start": "node server.js" },
+  "scripts": {
+    "start": "node server.js"
+  },
   "dependencies": {
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "morgan": "^1.10.0"
   },
-  "engines": { "node": "20.x" }
+  "engines": {
+    "node": "20.x"
+  }
 }
