--- a/worker/wrangler.toml
+++ b/worker/wrangler.toml
@@ -4,5 +4,5 @@ compatibility_date = "2025-09-01"
 
 [vars]
 # استخدم http لتفادي TLS مع IP؛ غيّرها https لو عندك دومين بشهادة صحيحة
-ORIGIN_BASE = "http://46.152.17.35"
+ORIGIN_BASE = "https://46.152.17.35"
 PROXY_TIMEOUT_MS = "15000"
